<resources>
    <string name="app_name">RPG Creator</string>
    <string name="podstawowe_informacje">Podaj imię, rasę, klasę oraz poziom postaci</string>
    <string name="punkty_ycia">Punkty życia</string>
    <string name="pochodzenie">Pochodzenie</string>
    <string name="charakter">Charakter</string>
    <string name="poziom">Poziom</string>
    <string name="xp">XP</string>
    <string name="podrasa">Podrasa</string>
    <string name="rasa">Rasa</string>
    <string name="klasa">Klasa</string>
    <string name="punkty_życia">Punkty życia</string>
    <string-array name="classes_array">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="races_array">
        <item>Dragonborn</item>
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Gnome</item>
        <item>Half-Orc</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Rogue</item>
        <item>Tiefling</item>
    </string-array>

</resources>
